Add placeholder content for home page

--- a/uSync/v9/Content/home.config
+++ b/uSync/v9/Content/home.config
@@ -12,5 +12,15 @@
     <Schedule />
     <Template Key="076d1af3-a9f2-4f60-a3c9-75e065bfcbd3">Home</Template>
   </Info>
-  <Properties />
+  <Properties>
+    <content>
+      <Value><![CDATA[{
+  "markup": "<h2>Welcome!</h2>\n<p>Welcome to j-indies.net! :-)</p>",
+  "blocks": {
+    "contentData": [],
+    "settingsData": []
+  }
+}]]></Value>
+    </content>
+  </Properties>
 </Content>
