chore: content updates

--- a/uSync/v9/Content/home.config
+++ b/uSync/v9/Content/home.config
@@ -15,7 +15,7 @@
   <Properties>
     <content>
       <Value><![CDATA[{
-  "markup": "<h2>Welcome!</h2>\n<p>Welcome to j-indies.net! :-)</p>",
+  "markup": "<h2>Welcome!</h2>\n<p>Welcome to j-indies.net! :-) This is the home page. There might be some interesting stuff here in the future...</p>",
   "blocks": {
     "contentData": [],
     "settingsData": []
