--- a/uSync/v9/ContentTypes/about.config
+++ b/uSync/v9/ContentTypes/about.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="4a027a05-0f43-4b57-b3dd-0a31bf8d0cd6" Alias="home" Level="1">
+<ContentType Key="3cbea151-9cce-4d71-a9c0-8c4f2a95f9d4" Alias="about" Level="1">
   <Info>
-    <Name>Home</Name>
+    <Name>About</Name>
     <Icon>icon-document</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
-    <AllowAtRoot>True</AllowAtRoot>
+    <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
@@ -15,21 +15,15 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Compositions />
-    <DefaultTemplate>Home</DefaultTemplate>
+    <DefaultTemplate>About</DefaultTemplate>
     <AllowedTemplates>
-      <Template Key="076d1af3-a9f2-4f60-a3c9-75e065bfcbd3">Home</Template>
+      <Template Key="32900ebb-5900-4bee-908d-45501d424c26">About</Template>
     </AllowedTemplates>
   </Info>
-  <Structure>
-    <ContentType Key="630f100f-f61d-4fe3-8486-02d69053112e" SortOrder="0">artists</ContentType>
-    <ContentType Key="80fdbc5f-e8dc-45cb-a677-13b1f891e296" SortOrder="1">contribute</ContentType>
-    <ContentType Key="739c3893-e73e-4229-8631-a8bf7523f9c2" SortOrder="2">genres</ContentType>
-    <ContentType Key="927b0758-84c0-4431-9b10-f4945eded818" SortOrder="3">labels</ContentType>
-    <ContentType Key="3cbea151-9cce-4d71-a9c0-8c4f2a95f9d4" SortOrder="4">about</ContentType>
-  </Structure>
+  <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>95866902-734d-45bc-bcfc-456c0838071f</Key>
+      <Key>6a367ecb-614a-4a55-b9c3-3120f9c5ef65</Key>
       <Name>Content</Name>
       <Alias>content</Alias>
       <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
@@ -47,7 +41,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>0701c3f8-b51b-4e7f-97a6-120c87fe5878</Key>
+      <Key>d9e9d03a-756f-4ea4-9c04-852ea6542ba2</Key>
       <Caption>Main</Caption>
       <Alias>main</Alias>
       <Type>Group</Type>
