--- a/uSync/v9/Content/advantage-lucy_1nhnuii3.config
+++ b/uSync/v9/Content/advantage-lucy_1nhnuii3.config
@@ -14,25 +14,40 @@
   </Info>
   <Properties>
     <aliases>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[Lucy van Pelt]]></Value>
     </aliases>
     <artistName>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[advantage Lucy]]></Value>
     </artistName>
     <artistNameRomanized>
       <Value><![CDATA[]]></Value>
     </artistNameRomanized>
     <biography>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[{
+  "markup": "<div class=\"wiki\">\n<div class=\"wiki-content\">\n<p>advantage Lucy is a Japanese indie pop/neo-acoustic band. They play songs influenced by 60s janglepop, Swedish pop, and pretty much anything else that makes people feel good. Presently comprising vocalist Aiko and guitarist Yoshiharu Ishizaka, the group was formed in 1995 as a four piece, named Lucy Van Pelt after the Peanuts character of the same name. A fixture on the indies scene, <a href=\"https://www.last.fm/music/Lucy+Van+Pelt\">Lucy Van Pelt</a> released several records on the God's Pop Records imprint, growing their fan base countrywide through frequent club gigs, in-store appearances, and other special events.</p>\n<p>In August 1998, the band changed its name to advantage Lucy per the request of the Peanuts trademark holders, signing several months later with Toshiba-EMI and releasing the EP Citrus e.p.. After several singles, the band made its full-length major label debut in May 1999 with Fanfare, following up the next year with another full-length, Station. Both records featured Aiko's fresh, yearning vocals, backed up by Ishizaka's melodic, jangly guitar work and a stylish yet sincere image, making them an instant favorite with Tokyo's trendy kids. At the height of the band's popularity, guitarist and founding member Takayuki Fukumura left the group around this time to form the band Vasallo Crab 75 (he sadly passed away, not yet thirty, due to heart disease in 2003). The group, already operating with no full-time bassist, decided to press on as a trio.</p>\n<p>advantage Lucy established their own label, Solaris Records, in January 2001 with the intention to start afresh, immediately releasing the mini albums Oolt Cloud and Anzu no kisetsu in March and April respectively. Additionally, in May of the same year Toshiba-EMI released a \"best of\" record containing selected tracks from 1996 to 2000 - an honor rarely bestowed on young \"indie\" bands. Shortly thereafter, tragedy struck again when drummer Kaname Banba developed a condition that rendered one of his legs unfit for drumming, and he too left the group. Reduced to its creative core of Aiko and Ishizaka, advantage Lucy continues to gig frequently with part-time members on drums and bass, and maintains an extremely loyal fan base.</p>\n</div>\n</div>",
+  "blocks": {
+    "contentData": [],
+    "settingsData": []
+  }
+}]]></Value>
     </biography>
     <disbanded>
       <Value><![CDATA[]]></Value>
     </disbanded>
     <formed>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[1995-01-01T00:00:00]]></Value>
     </formed>
     <images>
-      <Value><![CDATA[[]]]></Value>
+      <Value><![CDATA[[
+  {
+    "key": "b55f611b-e6ca-44d8-97ef-d235726a76b0",
+    "mediaKey": "c972996a-dc0e-46b7-9a4b-39a2d57c73d4"
+  },
+  {
+    "key": "1c59fdcc-1fdc-44ef-baf5-0fb122c76b1c",
+    "mediaKey": "c884afcb-e9cd-4cd5-8716-b79298203c0a"
+  }
+]]]></Value>
     </images>
     <links>
       <Value><![CDATA[]]></Value>
