--- a/uSync/v9/Content/advantage-lucy_1nhnuii3.config
+++ b/uSync/v9/Content/advantage-lucy_1nhnuii3.config
@@ -46,6 +46,22 @@
   {
     "key": "1c59fdcc-1fdc-44ef-baf5-0fb122c76b1c",
     "mediaKey": "c884afcb-e9cd-4cd5-8716-b79298203c0a"
+  },
+  {
+    "key": "dc49a4ed-c980-4eab-9288-59e5187654a9",
+    "mediaKey": "b2da1202-12c5-4742-a764-de414450741c"
+  },
+  {
+    "key": "38a0918d-4c37-4c96-bf53-455b79b20965",
+    "mediaKey": "b2f80763-251a-4b11-90d3-a6356d3366ca"
+  },
+  {
+    "key": "e79edb36-89bd-406b-b81c-85662db3b801",
+    "mediaKey": "138523f0-c3e2-4b44-af52-2d1b66647d80"
+  },
+  {
+    "key": "98247e9e-9473-40a9-a78b-eb1a1c9ebaef",
+    "mediaKey": "44334c0c-d7cc-46af-8d4a-50eb83110af0"
   }
 ]]]></Value>
     </images>
